--- a/organization-ui/package.json
+++ b/organization-ui/package.json
@@ -6,8 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "webpack -p",
-    "server": "NODE_ENV=prod babel-node --presets env ./src/server.js",
-    "server-mon": "NODE_ENV=dev nodemon --exec babel-node --presets env ./src/server.js",
+    "server": "NODE_ENV=dev nodemon index.js",
     "start": "npm run build; npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,17 +14,36 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "babel-plugin-transform-custom-element-classes": "^0.1.0",
     "cookie-parser": "~1.4.4",
     "express": "^4.16.4",
     "mongoose": "^5.5.14",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "concurrently": "^3.6.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "fs-extra": "^7.0.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.19.1",
-    "webpack": "^3.12.0"
+    "react-addons-test-utils": "^15.6.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
