add node to ci image and execute eslint on organization-ui

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
             pwd
             cd /home/circleci/project/organization-ui
             npm install
-            eslint organization-ui/src
+            eslint ./src
 
       - run:
           name: Copy organization source into GOPATH src directory and pull all dependencies
