--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,16 +39,16 @@ jobs:
 
       # static code analysis & coverage
       - run:
-          name: Static code analysis on organization-ui
+          name: Static code analysis on ${SOURCE_ROOT}
           command: |
             pwd
-            cd /home/circleci/project/organization-ui
+            cd /home/circleci/project/${SOURCE_ROOT}
             npm install
-            eslint ./src --format junit --output-file /home/circleci/project/organization-ui/reports/eslint.xml
+            eslint ./src --format junit --output-file /home/circleci/project/${SOURCE_ROOT}/reports/eslint.xml
       - store_test_results:
-          path: /home/circleci/project/organization-ui/reports
+          path: /home/circleci/project/${SOURCE_ROOT}/reports
       - store_artifacts:
-          path: /home/circleci/project/organization-ui/reports
+          path: /home/circleci/project/${SOURCE_ROOT}/reports
 
       - run:
           name: Copy organization source into GOPATH src directory and pull all dependencies
@@ -63,12 +63,15 @@ jobs:
             PROFILE: "ci"
           command: |
             go test -v ./...
+
 workflows:
   version: 2
   analyse_code_organization-ui:
     jobs:
       - build:
+          context: peof-organization-ui
           filters:
             branches:
               only:
+                # run the job only for commit to branches which start with name "organization-ui/"
                 - /organization-ui\/.*/
