--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,13 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
+# see https://circleci.com/docs/2.0/configuration-reference
 version: 2
 jobs:
   build:
+    code_analysis_nodejs:
+
+    unit_test_nodejs:
+
+    integration_test_nodejs:
+
     docker:
       - image: paulvitic/peof-circleci:20190803185216
         docker_layer_caching: true
@@ -65,7 +69,7 @@ jobs:
 
 workflows:
   version: 2
-  analyse_code_organization-ui:
+  code_analysis_organization-ui:
     jobs:
       - build:
           # this contexts is maintained at cicrleci
