--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,44 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+# see https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
 jobs:
+
+  code_analysis_nodejs:
+    description: "Static code analysis on Nodejs app"
+    parameters:
+      source_root:
+        description: "Which sub folder is being built."
+        type: string
+    docker:
+      - image: paulvitic/peof-circleci-nodejs:20190826161425
+    steps:
+      - checkout
+      - run:
+          name: Static code analysis with Eslint
+          command: |
+            pwd
+            cd /home/circleci/project/<< parameters.source_root >>
+            npm install
+            eslint ./src --format junit --output-file /home/circleci/project/<< parameters.source_root >>/reports/eslint.xml
+            - store_test_results:
+                path: /home/circleci/project/<< parameters.source_root >>/reports
+            - store_artifacts:
+                path: /home/circleci/project/<< parameters.source_root >>/reports
+
+
+  #unit_test_nodejs:
+
+  #integration_test_nodejs:
+
+  #code_analysis_go:
+
   build:
+    description: "Default build job, will be removed soon"
+    parameters:
+      source_root:
+        description: "Which sub folder is being built."
+        type: string
     docker:
       - image: paulvitic/peof-circleci:20190803185216
-        docker_layer_caching: true
 
       - image: circleci/mongo:4
         environment:
@@ -36,19 +68,6 @@ jobs:
           command: |
             mongo localhost:27017 < /home/circleci/mongo/mongo-init.js
 
-      # static code analysis & coverage
-      - run:
-          name: Static code analysis on organization-ui
-          command: |
-            pwd
-            cd /home/circleci/project/organization-ui
-            npm install
-            eslint ./src --format junit --output-file /home/circleci/project/organization-ui/reports/eslint.xml
-      - store_test_results:
-          path: /home/circleci/project/organization-ui/reports
-      - store_artifacts:
-          path: /home/circleci/project/organization-ui/reports
-
       - run:
           name: Copy organization source into GOPATH src directory and pull all dependencies
           command: |
@@ -62,3 +81,35 @@ jobs:
             PROFILE: "ci"
           command: |
             go test -v ./...
+
+  deploy_heroku:
+    description: "Deploy current branch to specified heroku app"
+    parameters:
+      heroku_app:
+        description: "Where to deploy"
+        type: string
+      extra_git_push_args:
+        description: "More git push flags (e.g. -f)"
+        default: ""
+        type: string
+    docker:
+      - image: circleci/node:10-browsers
+    steps:
+      - checkout
+      - run:
+          name: Deploy branch to Heroku
+          command: git push << parameters.extra_git_push_args >> https://heroku:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git $CIRCLE_BRANCH:master
+
+workflows:
+  version: 2
+  code_analysis_organization-ui:
+    jobs:
+      - code_analysis_nodejs:
+          source_root: organization-ui
+          # this contexts is maintained at cirleci
+          # context: peof-organization-ui TODO remove this context, use context predominantly for secrets, use parameters for variables
+          filters:
+            branches:
+              only:
+                # run the job only for commit to branches which start with name "organization-ui/"
+                - /organization-ui\/.*/
