--- a/framework-ui/package.json
+++ b/framework-ui/package.json
@@ -22,6 +22,8 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^1.18.9",
-    "webpack": "^3.12.0"
+    "webpack": "^3.12.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
