--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             cat ~/.netrc
             echo $HEROKU_API_KEY
             git remote add << parameters.heroku_app >> https://git.heroku.com/<< parameters.heroku_app >>.git
-            git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >>:master
+            git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >> master
 
   #unit_test_nodejs:
 
