--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
             touch ~/.netrc
             echo 'machine git.heroku.com login paul.vitic@gmail.com password xxxxxx' >> ~/.netrc
             git remote add << parameters.heroku_app >> https://git.heroku.com/<< parameters.heroku_app >>.git
+            heroku keys:add
             git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >> master
 
   #unit_test_nodejs:
