#23 remove pipeline.pull_request.source_branch parameter. It is not working

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,17 +46,12 @@ jobs:
 
   deploy_to_staging_environment:
     description: "Deploy to Heroku staging environment"
-    parameters:
-      source_branch:
-        description: "Source branch name of PR."
-        default: ""
-        type: string
     docker:
       - image: paulvitic/peof-circleci:20190827105003
     steps:
       - checkout
       # see: https://circleci-public.github.io/pipeline-preview-docs/pipeline_variables_reference.html
-      - run: echo "The PR source branch of this pipeline is << pipeline.id >>"
+      - run: echo "Running"
 
   #unit_test_nodejs:
 
