--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,9 +55,7 @@ jobs:
           name: Get PR
           command: |
             printenv
-            echo $CIRCLE_PULL_REQUEST
-            echo $CIRCLE_PULL_REQUESTS
-            echo $CIRCLE_REPOSITORY_URL
+            git log -5
 
 
   #unit_test_nodejs:
