#23 test deploy to stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,8 @@ jobs:
       - run:
           name: Deploy branch to Heroku staging
           command: |
-            git subtree push --prefix $GITHUB_PR_SOURCE_ROOT https://heroku:$HEROKU_API_KEY@git.heroku.com/$GITHUB_PR_SOURCE_ROOT-staging.git master
+            echo $GITHUB_PR_SOURCE_ROOT
+            git subtree push --prefix $GITHUB_PR_SOURCE_ROOT 'https://heroku:${HEROKU_API_KEY}@git.heroku.com/${GITHUB_PR_SOURCE_ROOT}-staging.git' master
 
 
   #unit_test_nodejs:
